WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271784
[iOS] 2 fast/viewport/viewport-legacy-xhtmlmp*.html layout tests are constantly failing.
https://bugs.webkit.org/show_bug.cgi?id=271784
Summary
[iOS] 2 fast/viewport/viewport-legacy-xhtmlmp*.html layout tests are constant...
Ben Schwartz
Reported
2024-03-27 12:45:17 PDT
The following 2 currently skipped layout tests are constantly failing locally: fast/viewport/viewport-legacy-xhtmlmp.html fast/viewport/viewport-legacy-xhtmlmp-remove-and-add.html HISTORY: None (tests are skipped). TEXT DIFFs: viewport-legacy-xhtmlmp.html: -ALERT: viewport size 320x480 scale 1 with limits [1, 5] and userScalable true +ALERT: viewport size 980x1078 scale 0.326531 with limits [0.326531, 5] and userScalable true viewport-legacy-xhtmlmp-remove-and-add.html -ALERT: viewport size 320x480 scale 1 with limits [1, 5] and userScalable true -ALERT: viewport size 320x480 scale 1 with limits [1, 5] and userScalable true -ALERT: viewport size 320x480 scale 1 with limits [1, 5] and userScalable true +ALERT: viewport size 980x1078 scale 0.326531 with limits [0.326531, 5] and userScalable true +ALERT: viewport size 980x1078 scale 0.326531 with limits [0.326531, 5] and userScalable true +ALERT: viewport size 980x1078 scale 0.326531 with limits [0.326531, 5] and userScalable true REPRODUCIBILITY: I was able to reproduce this issue on the iOS Simulator (17.4/21E213) ToT using the following command: run-webkit-tests --ios-simulator -v fast/viewport/viewport-legacy-xhtmlmp-remove-and-add.html fast/viewport/viewport-legacy-xhtmlmp.html --skipped ignore REGRESSION: Seeing as this is a viewport size issue, I would guess that the regression coincides with a simulated/physical device model change.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-27 12:45:24 PDT
<
rdar://problem/125504723
>
Abrar Rahman Protyasha
Comment 2
2024-03-31 03:20:33 PDT
This is not a rebaseline candidate. The 320x480 value comes from the initial viewport configuration, so we're doing something wrong when we don't respect it.
Abrar Rahman Protyasha
Comment 3
2024-03-31 03:21:44 PDT
Note that a functionally equivalent test with the following viewport meta tag... ``` <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1"> ``` ... instead of XHTML-MP yields the correct result.
Abrar Rahman Protyasha
Comment 4
2024-04-01 05:57:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26671
EWS
Comment 5
2024-04-03 04:06:53 PDT
Committed
276992@main
(1b57c1925dd6): <
https://commits.webkit.org/276992@main
> Reviewed commits have been landed. Closing PR #26671 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug